syntax = "proto3";

package ch6.ex2;

option java_package = "uk.me.uohiro.protobuf.model.ch6.ex2";
option java_outer_classname = "ArchiverServiceProto";
option java_multiple_files = true;
option optimize_for = SPEED;

service Archiver {
	rpc Zip(stream ZipRequest) returns (ZipResponse);
}

message ZipRequest {
	string file_name = 1;
	bytes contents = 2;
}

message ZipResponse {
	bytes zipped_contents = 1;
}
